Have our custom wrapper tasks set the DEFAULT_JVM_OPTIONS we require.